--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "mongoose": "^5.8.11",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "nodemon": "^2.0.2"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "dev": "nodemon -e js app.js "
+    "dev": "nodemon app.js "
   },
   "author": "",
   "license": "ISC"
