--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "bcrypt": "^3.0.8",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
+    "express-validator": "^6.4.0",
     "mongoose": "^5.8.11",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.2"
